Homepage translated to Czech.

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,4 +1,4 @@
-<!-- Default home page -->
+<!-- Výchozí domovská stránka -->
 <link type="text/css" href='http://sailsjs.org/styles/fonts.css' rel='stylesheet'/>
 <style>
     /* Styles included inline since you'll probably be deleting this page anyway */
@@ -16,15 +16,15 @@ setTimeout(function sunrise () {
         <h3 class="container">You're looking at: <code><%= view.pathFromApp + '.' +view.ext %></code></h3>
     </div>
     <div class="main container clearfix">
-        <!-- <h1>Getting started</h1>
-        <p>Don't worry, we've got your back.</p> -->
+        <!-- <h1>Začínáme</h1>
+        <p>Nebojte se, stojíme za vámi.</p> -->
         <ul class="getting-started">
             <li class="clearfix">
                 <div class="step">
                     <div class="sprite one"></div>
                     <h3>Generate a REST API.</h3>
                     <p>
-                        Run <code>sails generate api user</code>.  This will create two files: a <a href="http://sailsjs.org/#!/documentation/concepts/ORM/Models.html">model</a> <code class="pocket">api/models/User.js</code> and a <a href="http://sailsjs.org/#!/documentation/concepts/Controllers">controller</a><code class="pocket">api/controllers/UserController.js</code>.
+                        Spusťe příkaz <code>sails generate api user</code>.  Ten vytvoří dva soubory:  <a href="http://sailsjs.org/#!/documentation/concepts/ORM/Models.html">model</a> <code class="pocket">api/models/User.js</code> a <a href="http://sailsjs.org/#!/documentation/concepts/Controllers">controller</a><code class="pocket">api/controllers/UserController.js</code>.
                     </p>
                 </div>
             </li>
@@ -32,10 +32,10 @@ setTimeout(function sunrise () {
                 <div class="step">
                     <div class="sprite two"></div>
                     <h3>
-                        Lift your app.
+                        Nahoďte svou aplikaci.
                     </h3>
                     <p>
-                        Run <code>sails lift</code> to start up your app server.  If you visit <a target="_blank" href="http://localhost:1337/user"><code>http://localhost:1337/user</code></a> in your browser, you'll see a <a href="http://sailsjs.org/#!/documentation/reference/blueprint-api">WebSocket-compatible</a> user API.
+                        Spusťe příkaz <code>sails lift</code> pro spuštění vašeho aplikačního serveru.  Pokud navštívíte <a target="_blank" href="http://localhost:1337/user"><code>http://localhost:1337/user</code></a> ve vašem prohlížeči, uvidíte: <a href="http://sailsjs.org/#!/documentation/reference/blueprint-api">WebSocket-compatible</a> user API.
                     </p>
                 </div>
             </li>
@@ -43,26 +43,26 @@ setTimeout(function sunrise () {
                 <div class="step">
                     <div class="sprite three"></div>
                     <h3>
-                        Dive in.
+                        Ponořme se do toho.
                     </h3>
-                    <p>Blueprints are just the beginning.  You'll probably also want to learn how to customize your app's <a href="http://sailsjs.org/#!/documentation/concepts/Routes">routes</a>, set up <a href="http://sailsjs.org/#!/documentation/concepts/Policies">security policies</a>, configure your <a href="http://sailsjs.org/#!/documentation/reference/sails.config/sails.config.connections.html">data sources</a>, and build custom <a target="_blank" href="http://sailsjs.org/#!/documentation/concepts/Controllers?q=actions">controller actions</a>. For more help getting started, check out the links on this page.</p>
+                    <p>Blueprints jsou jen začátek. Nejspíš budete se chtít naučit také přizpůsobit vaše aplikační <a href="http://sailsjs.org/#!/documentation/concepts/Routes">routy</a>, nastavit <a href="http://sailsjs.org/#!/documentation/concepts/Policies">bezpečnostní politiku</a>, nakonfigurovat vaše <a href="http://sailsjs.org/#!/documentation/reference/sails.config/sails.config.connections.html">zdroje dat</a> a vytvořit vlastní <a target="_blank" href="http://sailsjs.org/#!/documentation/concepts/Controllers?q=actions">akce controlleru</a>. Pro další pomoc s vašemi začátky, navštivte všechny odkazy na této stránce.</p>
 
                 </div>
             </li>
         </ul>
         <div class="links">
-            <!-- <h3>Links</h3> -->
+            <!-- <h3>Odkazy</h3> -->
             <ul class="link-list">
 
-                <h4>Docs</h4>
-                <a target="_blank" href="http://sailsjs.org/#!/documentation/anatomy/myApp"><li>App Structure</li></a>
+                <h4>Dokumenty</h4>
+                <a target="_blank" href="http://sailsjs.org/#!/documentation/anatomy/myApp"><li>Struktura aplikace</li></a>
                 <a target="_blank" href="http://sailsjs.org/#!/documentation/reference"><li>Reference</li></a>
-                <a target="_blank" href="http://sailsjs.org/#!/documentation/concepts/extending-sails/Adapters/adapterList.html"><li>Supported Databases</li></a>
+                <a target="_blank" href="http://sailsjs.org/#!/documentation/concepts/extending-sails/Adapters/adapterList.html"><li>Podporované databáze</li></a>
 
-                <h4>Tutorials</h4>
+                <h4>Návody</h4>
                 <a target="_blank" href="https://github.com/sails101"><li>Sails 101</li></a>
 
-                <h4>Community</h4>
+                <h4>Komunita</h4>
                 <a target="_blank" href="http://stackoverflow.com/search?q=sails.js"><li>StackOverFlow</li></a>
                 <a target="_blank" href="https://github.com/balderdashy/sails"><li>GitHub</li></a>
                 <a target="_blank" href="https://groups.google.com/forum/#!forum/sailsjs"><li>Google Group</li></a>
