Error message of 404 translated into Czech.

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -21,21 +21,21 @@
 
 
 
-  This is the default "404: Not Found" page.
-  User agents that don't "Accept" HTML will see a JSON version instead.
-  You can customize the control logic for your needs in `config/404.js`
+  Toto je výchozí "404: Not Found" stránka.
+  Uživatelský agent, který "Nepříjme" HTML, namísto toho uvidí JSON verzi.
+  Přizpůsobení logiky controly lze provést pro vaše potřeby v 'config/404.js' 
 
-  Sails considers a request to be in a "404: Not Found" state when a user
-  requests a URL which doesn't match any of your app's routes or blueprints.
+  Sails považuje žádost za "404: Not Found" stav, když uživatel
+  žádá o URL, která se neshoduje s jakoukoliv aplikační routou nebo blueprintem.
 
-  You can also trigger this response from one of your controllers or policies with:
+  Tuto odpověď můžete spustit z jakéhokoliv controlleru nebo politiky za pomoci:
   `return res.notFound();`
 
 
 -->
 <html>
   <head>
-    <title>Page Not Found</title>
+    <title>Stránka nenalezena</title>
     <link href='http://sailsjs.org/styles/fonts.css' rel='stylesheet'/>
     <style>
       /* Styles included inline since you'll probably be deleting this page anyway */
@@ -51,17 +51,17 @@
 
       <div class="main">
         <h1>
-          Something's fishy here.
+          Něco je zde podezřelé.
         </h1>
         <h2>
         	<% if (typeof error!== 'undefined') { %>
           <%= error %>
           <% } else { %>
-          The page you were trying to reach doesn't exist.
+          Stránka, kterou se pokoušíte navštívit neexistuje.
           <% } %>
         </h2>
         <p class="help">
-          <a href="http://en.wikipedia.org/wiki/HTTP_404">Why</a> might this be happening?
+          <a href="http://en.wikipedia.org/wiki/HTTP_404">Jak</a> se to mohlo stát?
         </p>
       </div>
 
