--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>New Sails App</title>
+    <title><%= __('New Sails App')</title>
 
-    <!-- Viewport mobile tag for sensible mobile support -->
+    <!-- Viewport tag mobilu pro podporu citlivosti mobilů -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     
     <!--  
-        Stylesheets and Preprocessors
+        Styly a Preprocesory
         ==============================
 
-        You can always bring in CSS files manually with `<link>` tags, or asynchronously
-        using a solution like AMD (RequireJS).  Or, if you like, you can take advantage 
-        of Sails' conventional asset pipeline (boilerplate Gruntfile).
+        Vždy můžete přidat CSS soubory manuálně přes `<link>` tag, nebo asynchronně
+        požitím řešení jako AMD (RequireJS).  Nebo, pokud chcete, můžete použít výhodu
+        Sails konvenční asset pipeline (boilerplate Gruntfile).
 
-        By default, stylesheets from your `assets/styles` folder are included
-        here automatically (between STYLES and STYLES END). Both CSS (.css) and LESS (.less)
-        are supported. In production, your styles will be minified and concatenated into
-        a single file.
+        Defaultně jsou styly z Vašeho adresáře `assets/styles` vloženy sem automaticky 
+        (mezi STYLES a STYLES END). Je podporováno jak CSS (.css) tak i LESS (.less).
+        V produkci budou Vaše styly minimalizovány a sloučeny do jediného souboru.
         
-        To customize any part of the built-in behavior, just edit `tasks/pipeline.js`.
-        For example, here are a few things you could do:
+        Pro upravení jakékoliv části vestavěného chování upravte `tasks/pipeline.js`.
+        Zde je pár věcí, které můžete například udělat:
             
-            + Change the order of your CSS files
-            + Import stylesheets from other directories
-            + Use a different or additional preprocessor, like SASS, SCSS or Stylus
+            + Změnit pořadí Vašich CSS souborů
+            + Importovat styly z jiných adresářů
+            + Použít jiné preprocesory jako SASS, CSS nebo Stylus
     -->
 
     <!--STYLES-->
@@ -41,21 +40,21 @@
         Client-side Templates
         ========================
 
-        HTML templates are important prerequisites of modern, rich client applications.
-        To work their magic, frameworks like Backbone, Angular, Ember, and Knockout require
-        that you load these templates client-side.
-
-        By default, your Gruntfile is configured to automatically load and precompile
-        client-side JST templates in your `assets/templates` folder, then
-        include them here automatically (between TEMPLATES and TEMPLATES END).
+        HTML šablony jsou důležité are important předpoklady moderní, bohaté klientské aplikace.
+        Aby jejich magie fungovala, frameworky jako Backbone, Angular, Ember nebo Knockout vyžadují,
+        aby jste je načetly na straně klienta.
         
-        To customize this behavior to fit your needs, just edit `tasks/pipeline.js`.
-        For example, here are a few things you could do:
-
-            + Import templates from other directories
-            + Use a different template engine (handlebars, jade, dust, etc.)
-            + Internationalize your client-side templates using a server-side
-              stringfile before they're served.
+        Ve výchozím stavu je Váš Gruntfile konfigurován aby automaticky načetl a předkompiloval
+        JST šablony pro klienta z Vašeho `assets/templates` adresáře a následně je automaticky vloží
+        sem (mezi TEMPLATES a TEMPLATES END).
+        
+        Pro úpravu tohoto vestavěného chování upravte `tasks/pipeline.js`.
+        Zde je pár věcí, které můžete například udělat:
+        
+            + Importovat šablony z jiných adresářů
+            + Použít jiný engine šablon (handlebars, jade, dust, etc.)
+            + Internacionalizovat Vaši klientskou část šablon použitím serverového textového souboru
+              předtím než jsou naservírovány klientovi.
     -->
 
     <!--TEMPLATES-->
@@ -66,23 +65,20 @@
 
       Client-side Javascript
       ========================
-
-      You can always bring in JS files manually with `script` tags, or asynchronously
-      on the client using a solution like AMD (RequireJS).  Or, if you like, you can 
-      take advantage of Sails' conventional asset pipeline (boilerplate Gruntfile).
-
-      By default, files in your `assets/js` folder are included here
-      automatically (between SCRIPTS and SCRIPTS END).  Both JavaScript (.js) and
-      CoffeeScript (.coffee) are supported. In production, your scripts will be minified
-      and concatenated into a single file.
+      Vždy můžete přidat JS soubory manuálně přes `script` tagy, nebo asynchronně
+      požitím řešení jako AMD (RequireJS).  Nebo, pokud chcete, můžete použít výhodu
+      Sails konvenční asset pipeline (boilerplate Gruntfile).
+    
+      Defaultně jsou soubory z Vašeho adresáře `assets/js` vloženy automaticky sem
+      (mezi SCRIPT a SCRIPT END). Je podporováno jak JavaScript (.js) tak i CoffeScript (.coffee).
+      V produkci budou Vaše skripty minimalizovány a sloučeny do jediného souboru.
       
-      To customize any part of the built-in behavior, just edit `tasks/pipeline.js`.
-      For example, here are a few things you could do:
-          
-          + Change the order of your scripts
-          + Import scripts from other directories
-          + Use a different preprocessor, like TypeScript
-
+      Pro upravení jakékoliv části vestavěného chování upravte `tasks/pipeline.js`.
+      Zde je pár věcí, které můžete například udělat:
+            
+            + Změnit pořadí Vašich skriptů
+            + Importovat skripty z jiných adresářů
+            + Použít jiný preprocesor jako TypeScript
     -->
 
     <!--SCRIPTS-->
